--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.46.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
