--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "globals": "^15.11.0",
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
+    "supabase": "^1.207.9",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.10.0",
     "vite": "^5.4.10"
