--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "tsc -b && nx vite:build",
     "lint": "eslint .",
-    "preview": "vite preview",
+    "preview": "nx vite:preview",
     "prepare": "husky",
     "test": "echo \"No test specified\" && exit 0"
   },
@@ -20,9 +20,13 @@
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
     "@eslint/js": "^9.13.0",
+    "@nx/cypress": "20.0.8",
+    "@nx/vite": "20.0.8",
+    "@nx/web": "20.0.8",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "@vitest/ui": "^1.3.1",
     "cypress": "^13.15.0",
     "eslint": "^9.13.0",
     "eslint-plugin-react-hooks": "^5.0.0",
@@ -30,9 +34,12 @@
     "globals": "^15.11.0",
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
+    "nx": "20.0.8",
     "supabase": "^1.207.9",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.10.0",
-    "vite": "^5.4.10"
-  }
+    "vite": "^5.4.10",
+    "vitest": "^1.3.1"
+  },
+  "nx": {}
 }
